# pattern_reconizer

./: .gitignore  DokuPrivat.txt  README.md  README_Dokumentation.md  app.py  pyproject.toml
CSVmanager/: csvManager.py  patternData.csv
CameraReader/: CameraReader.py
