[tool.poetry]
name = "pattern-reconizer"
version = "0.1.0"
description = ""
authors = ["pepetoni246 <117388438+pepetoni246@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
